
Next Feature Release
--------------------

- Added support for a blob directory. No BlobStorage wrapper is needed.
  Cluster nodes will need to use a shared filesystem such as NFS or
  SMB/CIFS.

- [TODO: add the blob_dir parameter to component.xml and README]


Next Bug Fix Release
--------------------

- In Oracle, don't trip over transaction descriptions longer than 2000
  bytes.

- When opening the database for the first time, don't issue a warning
  about the inevitable POSKeyError on the root OID.


Version 1.2.0b2 (2009-05-05)
----------------------------

- RelStorage now implements IMVCCStorage, making it compatible with
  ZODB 3.9.0b1 and above.

- Removed two-phase commit support from the PostgreSQL adapter. The
  feature turned out to be unnecessary.

- Added MySQL 5.1.34 and above to the list of supportable databases.

- Fixed minor test failures under Windows. Windows is now a supportable
  platform.


Version 1.1.3 (2009-02-04)
--------------------------

- In rare circumstances, ZODB can legitimately commit an object twice in a
  single transaction.  Fixed RelStorage to accept that.

- Auto reconnect to Oracle sometimes did not work because cx_Oracle was
  raising a different kind of exception than expected.  Fixed.

- Included LICENSE.txt in the source distribution.


Version 1.1.2 (2009-01-27)
--------------------------

- When both cache-servers and poll-interval are set, we now poll the
  cache for changes on every request.  This makes it possible to use
  a high poll-interval to reduce the database polling burden, yet
  every client can see changes immediately.

- Added the pack-dry-run option, which causes pack operations to only
  populate the pack tables with the list of objects and states to pack,
  but not actually pack.

- Refined the pack algorithm.  It was not removing as many object states
  as it should have.  As a bonus, there is now a method of adapters called